# TransformerCPP

./: .gitignore  CMakeLists.txt  README.md
examples/: extra_tests.cpp  xor.cpp
include/: attention.hpp  graph.hpp  init.hpp  layers.hpp  loss.hpp  node.hpp  optimizer.hpp  positional_encoding.hpp  tensor.hpp  threading.hpp  transformer_block.hpp
src/: attention.cpp  graph.cpp  init.cpp  layers.cpp  main.cpp  optimizer.cpp  tensor.cpp  transformer_block.cpp
